--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "env-cmd -f ./config/dev.env nodemon src/index.js",
-    "start": "node src/index.js",
+    "start": "env-cmd -f ./config/test.env nodemon src/index.js",
     "test": "env-cmd -f ./config/test.env jest --watch --runInBand"
   },
   "jest": {
